--- a/src/app/components/advanced-expansion-panel/advanced-expansion-panel.component.html
+++ b/src/app/components/advanced-expansion-panel/advanced-expansion-panel.component.html
@@ -31,18 +31,29 @@
     </mat-expansion-panel>
     <mat-expansion-panel togglePosition="before">
       <mat-expansion-panel-header [@.disabled]="true">
-        <mat-panel-title> Configuration Naming</mat-panel-title>
+        <mat-panel-title> Google Tag</mat-panel-title>
         <mat-panel-description
-          ><mat-icon matSuffix matTooltip="By default is GA4 Configuration"
+          ><mat-icon
+            matSuffix
+            matTooltip="Google Tag Name comes with a default measurement ID.
+            You can use an existing measurement ID or leave it empty create a new one."
             >help_outline</mat-icon
           ></mat-panel-description
         >
       </mat-expansion-panel-header>
       @defer (on viewport) {
       <section class="advanced__configuration-name">
-        <form [formGroup]="setupForm">
+        <form
+          [formGroup]="setupForm"
+          style="display: flex; flex-direction: column"
+        >
           <mat-form-field>
-            <input matInput formControlName="configurationName" />
+            <mat-label>Google Tag Name</mat-label>
+            <input matInput formControlName="googleTagName" />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Use Existing Measurement ID</mat-label>
+            <input matInput formControlName="useExistingMesurementId" />
           </mat-form-field>
         </form>
       </section>
