1. update GA4 config, tag format 2. add ecommerce tick feature support instead of setting up event attrs 3. support setting up ecommerce lvl custom attr to event (no item lvl due to it will automatically sent) 4. add a new feature to support new GA4 id config in event tags (sorry probably not covering most of the test code yet)

--- a/src/app/components/advanced-expansion-panel/advanced-expansion-panel.component.html
+++ b/src/app/components/advanced-expansion-panel/advanced-expansion-panel.component.html
@@ -55,6 +55,10 @@
             <mat-label>Use Existing Measurement ID</mat-label>
             <input matInput formControlName="useExistingMesurementId" />
           </mat-form-field>
+          <mat-form-field>
+            <mat-label>Existing Measurement ID Variable</mat-label>
+            <input matInput formControlName="useExistingMesurementVariable" />
+          </mat-form-field>
         </form>
       </section>
       } @placeholder {
